# eq

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
data/: chat_history.json  history.jsonl  tasks.json
site/: index.html  style.css
src/: ai.rs  cli.rs  lib.rs  main.rs
src/models/: log.rs  mod.rs  store.rs  task.rs
src/parser/: ai_commands.rs  input.rs  mod.rs
src/storage/: paths.rs
src/tui/: app.rs  handlers.rs  mod.rs  ui.rs  zen.rs
src/tui/widgets/: mod.rs  quadrant.rs
