[package]
name = "eq"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
dotenv = "0.15.0"
textwrap = "0.16.2"
unicode-width = "0.2.2"
