[package]
name = "eq"
version = "0.1.0"
edition = "2021"
description = "Terminal-based task manager using the Eisenhower Matrix method."
license = "MIT"
repository = "https://github.com/xiaolong-y/eq"
keywords = ["cli", "tui", "productivity", "task-manager", "eisenhower"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
dotenv = "0.15.0"
textwrap = "0.16.2"
unicode-width = "0.2.2"
